# arabic-web-scraper

./: .gitignore  README.md  arabicfi_database.py  arabicfi_scraper.py  database_connector.py  information_compiler.py  main.py  pyproject.toml  scraper.py
